test/fixtures/errors/jade/invalid.pug

//- keep on line 3
if (youAreUsingPug youAreUsingPug
